Fixing some overlap issues with Tracks

--- a/src/components/Tracks/Tracks.css
+++ b/src/components/Tracks/Tracks.css
@@ -20,7 +20,7 @@
   flex-direction: column;
   justify-content: center;
   padding: 30px 0;
-  width: 40%;
+  width: 50%;
 }
 
 .tracks-text-container h1{
@@ -58,7 +58,7 @@
   max-width: 30vw;
 }
 
-@media only screen and (max-width: 960px) {
+@media only screen and (max-width: 1150px) {
   .tracks-text-container {
     width: 90%;
     margin: auto;
